Add a slider that updates the grid size from 16 up to 100

--- a/index.html
+++ b/index.html
@@ -11,6 +11,8 @@
 
         </div>
 
+        <input type="range" min="16" max="100" value="16" class="grid-size-slider">
+
         <script src="script.js"></script>
     </body>
 
