Add clear grid button

--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
         <main>
             <div class="controls">
                 <input type="color" class="color-picker">
+                <button class="clear-button">CLEAR</button>
                 <input type="range" min="16" max="100" value="16" class="grid-size-slider">
             </div>
             
