--- a/index.html
+++ b/index.html
@@ -13,6 +13,8 @@
         <main>
             <div class="controls">
                 <input type="color" class="color-picker">
+                <button class="color-mode" value="color">COLOR</button>
+                <button class="eraser-mode" value="eraser">ERASER</button>
                 <button class="clear-button">CLEAR</button>
                 <input type="range" min="16" max="100" value="16" class="grid-size-slider">
             </div>
