Add rainbow mode

--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
             <div class="controls">
                 <input type="color" class="color-picker">
                 <button class="color-mode" value="color">COLOR</button>
+                <button class="rainbow-mode" value="rainbow">RAINBOW</button>
                 <button class="eraser-mode" value="eraser">ERASER</button>
                 <button class="clear-button">CLEAR</button>
                 <input type="range" min="16" max="100" value="16" class="grid-size-slider">
