--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
                 <button class="rainbow-mode" value="rainbow">RAINBOW MODE</button>
                 <button class="eraser-mode" value="eraser">ERASER</button>
                 <button class="clear-button">CLEAR</button>
+                <div class="grid-size"></div>
                 <input type="range" min="16" max="100" value="16" class="grid-size-slider">
             </div>
             
