--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <main>
             <div class="controls">
                 <input type="color" class="color-picker">
-                <button class="color-mode" value="color">COLOR MODE</button>
+                <button class="color-mode active" value="color">COLOR MODE</button>
                 <button class="rainbow-mode" value="rainbow">RAINBOW MODE</button>
                 <button class="eraser-mode" value="eraser">ERASER</button>
                 <button class="clear-button">CLEAR</button>
